# CSO

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  build.sh  build.sh~
cmake_modules/: FindG2O.cmake~
data/: config.yaml~  params.yaml~
include/: closed_form_calibration.h  edge_calib.h  g2o_optimize.h  gm2dl_io.h  libviso2_wrapper.h  motion_information.h  yaml_wrapper.h
src/: closed_form_calibration.cpp  edge_calib.cpp  g2o_optimize.cpp  gm2dl_io.cpp  libviso2_wrapper.cpp  main.cpp
